# gp-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  readme.txt
.github/workflows/: format.yaml
c/: CMakeLists.txt
c/include/gigperformer/sdk/: exports.h  imports.h  macros.h  types.h  utils.h
c/src/gigperformer/sdk/: imports.c  utils.c
cpp/include/gigperformer/sdk/: CHANGELOG.md  GPMidiMessages.h  GPUtils.h  GigPerformerAPI.h  GigPerformerFunctions.h
cpp/src/gigperformer/sdk/: GPMidiMessages.cpp  GPUtils.cpp  GigPerformerAPI.cpp  GigPerformerFunctions.cpp  entry.cpp
doc/: Gig Performer API Version 1.docx
examples/c/: howto.txt
examples/c/hellogp/: CMakeLists.txt  build.cmd  build.sh  main.c
examples/cpp/HelloGP-JUCE/: HelloGP-JUCE.jucer  howto.txt
examples/cpp/HelloGP-JUCE/Source/: LibMain.cpp  LibMain.h  LogWindow.cpp  LogWindow.h
examples/cpp/hellogp/: CMakeLists.txt  LibMain.cpp  LibMain.h  build.cmd  build.sh  howto.txt
interfaces/C/: GPTypes.h  exports.h  imports.c  imports.h  macros.h  utils.c  utils.h
interfaces/CPP/: GPMidiMessages.cpp  GPMidiMessages.h  GPUtils.cpp  GPUtils.h  GigPerformerAPI.h  GigPerformerFunctions.cpp  GigPerformerFunctions.h  entry.cpp
sdk/c/: CMakeLists.txt
sdk/c/include/gigperformer/sdk/: exports.h  imports.h  macros.h  types.h
sdk/c/include/gigperformer/sdk/c/: exports.h
sdk/c/src/gigperformer/sdk/c/: utils.c
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/gigperformer/sdk/: GPMidiMessages.h  GPUtils.h  GigPerformerAPI.h  GigPerformerFunctions.h
sdk/cpp/include/gigperformer/sdk/cpp/: GPMidiMessages.h  GigPerformerFunctions.h
sdk/cpp/src/gigperformer/sdk/: GPMidiMessages.cpp  GPUtils.cpp  GigPerformerFunctions.cpp  entry.cpp
sdk/cpp/src/gigperformer/sdk/cpp/: GPMidiMessages.cpp  GPUtils.cpp  GigPerformerFunctions.cpp
sdk/gigperformer/sdk/c/: imports.c  imports.h
sdk/gigperformer/sdk/cpp/: GPMidiMessages.cpp  GPUtils.cpp  GPUtils.h  GigPerformerAPI.h  GigPerformerFunctions.cpp  entry.cpp
